Chore: default IntelliJ warning refactoring