@@ -1,15 +1,14 @@
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.List;
 import java.util.Random;
 import java.util.Scanner;
 
 public class Main {
-    static ArrayList<String> playerNames = new ArrayList<String>();
-    static ArrayList<Boolean> humanPlayers = new ArrayList<Boolean>();
-    static ArrayList<ArrayList<String>> hands = new ArrayList<ArrayList<String>>();
-    static ArrayList<String> deck = new ArrayList<String>();
-    static ArrayList<String> discard = new ArrayList<String>();
+    static ArrayList<String> playerNames = new ArrayList<>();
+    static ArrayList<Boolean> humanPlayers = new ArrayList<>();
+    static ArrayList<ArrayList<String>> hands = new ArrayList<>();
+    static ArrayList<String> deck = new ArrayList<>();
+    static ArrayList<String> discard = new ArrayList<>();
     static int[] scores = new int[10];
     static int currentPlayer = 0;
     static int direction = 1;
@@ -73,30 +72,30 @@ public class Main {
         if (human) {
             playerNames.add("You");
             humanPlayers.add(Boolean.TRUE);
-            hands.add(new ArrayList<String>());
+            hands.add(new ArrayList<>());
         }
         for (int i = 1; i <= bots; i++) {
             playerNames.add("Bot" + i);
             humanPlayers.add(Boolean.FALSE);
-            hands.add(new ArrayList<String>());
+            hands.add(new ArrayList<>());
         }
     }
 
     static void playGame() {
         deck.clear();
         String[] colors = {"R", "Y", "G", "B"};
-        for (int c = 0; c < colors.length; c++) {
-            deck.add(colors[c] + "0");
+        for (String color : colors) {
+            deck.add(color + "0");
             for (int n = 1; n <= 9; n++) {
-                deck.add(colors[c] + n);
-                deck.add(colors[c] + n);
+                deck.add(color + n);
+                deck.add(color + n);
             }
-            deck.add(colors[c] + "S");
-            deck.add(colors[c] + "S");
-            deck.add(colors[c] + "R");
-            deck.add(colors[c] + "R");
-            deck.add(colors[c] + "+2");
-            deck.add(colors[c] + "+2");
+            deck.add(color + "S");
+            deck.add(color + "S");
+            deck.add(color + "R");
+            deck.add(color + "R");
+            deck.add(color + "+2");
+            deck.add(color + "+2");
         }
         for (int i = 0; i < 4; i++) {
             deck.add("W");
@@ -104,8 +103,8 @@ public class Main {
         }
         Collections.shuffle(deck, random);
         discard.clear();
-        for (int i = 0; i < hands.size(); i++) {
-            hands.get(i).clear();
+        for (ArrayList<String> strings : hands) {
+            strings.clear();
         }
         for (int i = 0; i < playerNames.size(); i++) {
             for (int j = 0; j < 7; j++) {
@@ -128,12 +127,12 @@ public class Main {
             ArrayList<String> hand = hands.get(currentPlayer);
 
             if (!quiet) {
-                System.out.println("\nUp card: " + upCard + (calledColor.equals("") ? "" : " called " + calledColor));
+                System.out.println("\nUp card: " + upCard + (calledColor.isEmpty() ? "" : " called " + calledColor));
                 System.out.println(name + " hand: " + join(hand));
             }
 
-            int chosen = -1;
-            if (humanPlayers.get(currentPlayer).booleanValue()) {
+            int chosen;
+            if (humanPlayers.get(currentPlayer)) {
                 chosen = askHuman(hand);
             } else {
                 chosen = chooseBotCard(hand);
@@ -146,7 +145,7 @@ public class Main {
                     System.out.println(name + " draws " + drawn);
                 }
                 if (isLegal(drawn, upCard, calledColor)) {
-                    if (!humanPlayers.get(currentPlayer).booleanValue()) {
+                    if (!humanPlayers.get(currentPlayer)) {
                         chosen = hand.size() - 1;
                     } else {
                         System.out.print("Play drawn card " + drawn + "? y/n: ");
@@ -179,7 +178,7 @@ public class Main {
                     ok = true;
                 } else if (cardColor.equals(upColor)) {
                     ok = true;
-                } else if (!calledColor.equals("") && cardColor.equals(calledColor)) {
+                } else if (!calledColor.isEmpty() && cardColor.equals(calledColor)) {
                     ok = true;
                 } else if (cardRank.equals(upRank) && !cardRank.equals("NUMBER")) {
                     ok = true;
@@ -205,7 +204,7 @@ public class Main {
                 }
 
                 if (card.equals("W") || card.equals("W4")) {
-                    if (humanPlayers.get(currentPlayer).booleanValue()) {
+                    if (humanPlayers.get(currentPlayer)) {
                         calledColor = askColor();
                     } else {
                         calledColor = chooseBotColor(hand);
@@ -219,7 +218,7 @@ public class Main {
                     System.out.println(name + " says UNO!");
                 }
 
-                if (hand.size() == 0) {
+                if (hand.isEmpty()) {
                     int points = 0;
                     for (int i = 0; i < hands.size(); i++) {
                         if (i != currentPlayer) {
@@ -276,15 +275,15 @@ public class Main {
     }
 
     static String draw() {
-        if (deck.size() == 0) {
+        if (deck.isEmpty()) {
             deck.addAll(discard);
             discard.clear();
             Collections.shuffle(deck, random);
         }
-        if (deck.size() == 0) {
+        if (deck.isEmpty()) {
             return "W";
         }
-        return deck.remove(0);
+        return deck.removeFirst();
     }
 
     static int chooseBotCard(ArrayList<String> hand) {
@@ -293,7 +292,7 @@ public class Main {
             boolean ok = false;
             if (card.startsWith("W")) ok = true;
             else if (color(card).equals(color(upCard))) ok = true;
-            else if (!calledColor.equals("") && color(card).equals(calledColor)) ok = true;
+            else if (!calledColor.isEmpty() && color(card).equals(calledColor)) ok = true;
             else if (rank(card).equals(rank(upCard)) && !rank(card).equals("NUMBER")) ok = true;
             else if (rank(card).equals("NUMBER") && rank(upCard).equals("NUMBER") && number(card) == number(upCard)) ok = true;
             if (rank(card).equals("DRAW_TWO") && ok) {
@@ -305,7 +304,7 @@ public class Main {
             boolean ok = false;
             if (card.startsWith("W")) ok = true;
             else if (color(card).equals(color(upCard))) ok = true;
-            else if (!calledColor.equals("") && color(card).equals(calledColor)) ok = true;
+            else if (!calledColor.isEmpty() && color(card).equals(calledColor)) ok = true;
             else if (rank(card).equals(rank(upCard)) && !rank(card).equals("NUMBER")) ok = true;
             else if (rank(card).equals("NUMBER") && rank(upCard).equals("NUMBER") && number(card) == number(upCard)) ok = true;
             if (rank(card).equals("SKIP") && ok) {
@@ -317,7 +316,7 @@ public class Main {
             boolean ok = false;
             if (card.startsWith("W")) ok = true;
             else if (color(card).equals(color(upCard))) ok = true;
-            else if (!calledColor.equals("") && color(card).equals(calledColor)) ok = true;
+            else if (!calledColor.isEmpty() && color(card).equals(calledColor)) ok = true;
             else if (rank(card).equals(rank(upCard)) && !rank(card).equals("NUMBER")) ok = true;
             else if (rank(card).equals("NUMBER") && rank(upCard).equals("NUMBER") && number(card) == number(upCard)) ok = true;
             if (rank(card).equals("NUMBER") && ok) {
@@ -362,17 +361,19 @@ public class Main {
         while (true) {
             System.out.print("Call color R/Y/G/B: ");
             String input = scanner.nextLine().trim().toUpperCase();
-            if (input.equals("R")) {
-                return "R";
-            }
-            if (input.equals("Y")) {
-                return "Y";
-            }
-            if (input.equals("G")) {
-                return "G";
-            }
-            if (input.equals("B")) {
-                return "B";
+            switch (input) {
+                case "R" -> {
+                    return "R";
+                }
+                case "Y" -> {
+                    return "Y";
+                }
+                case "G" -> {
+                    return "G";
+                }
+                case "B" -> {
+                    return "B";
+                }
             }
             System.out.println("Bad color.");
         }
@@ -383,16 +384,13 @@ public class Main {
         int y = 0;
         int g = 0;
         int b = 0;
-        for (int i = 0; i < hand.size(); i++) {
-            String c = color(hand.get(i));
-            if (c.equals("R")) {
-                r++;
-            } else if (c.equals("Y")) {
-                y++;
-            } else if (c.equals("G")) {
-                g++;
-            } else if (c.equals("B")) {
-                b++;
+        for (String s : hand) {
+            String c = color(s);
+            switch (c) {
+                case "R" -> r++;
+                case "Y" -> y++;
+                case "G" -> g++;
+                case "B" -> b++;
             }
         }
         if (r >= y && r >= g && r >= b) {
@@ -413,16 +411,13 @@ public class Main {
         if (color(card).equals(color(up))) {
             return true;
         }
-        if (!call.equals("") && color(card).equals(call)) {
+        if (!call.isEmpty() && color(card).equals(call)) {
             return true;
         }
         if (rank(card).equals(rank(up)) && !rank(card).equals("NUMBER")) {
             return true;
         }
-        if (rank(card).equals("NUMBER") && rank(up).equals("NUMBER") && number(card) == number(up)) {
-            return true;
-        }
-        return false;
+        return rank(card).equals("NUMBER") && rank(up).equals("NUMBER") && number(card) == number(up);
     }
 
     static String color(String card) {
@@ -469,16 +464,12 @@ public class Main {
 
     static int points(String card) {
         String r = rank(card);
-        if (r.equals("NUMBER")) {
-            return number(card);
-        }
-        if (r.equals("SKIP") || r.equals("REVERSE") || r.equals("DRAW_TWO")) {
-            return 20;
-        }
-        if (r.equals("WILD") || r.equals("WILD_DRAW_FOUR")) {
-            return 50;
-        }
-        return 0;
+        return switch (r) {
+            case "NUMBER" -> number(card);
+            case "SKIP", "REVERSE", "DRAW_TWO" -> 20;
+            case "WILD", "WILD_DRAW_FOUR" -> 50;
+            default -> 0;
+        };
     }
 
     static void next() {
@@ -492,14 +483,14 @@ public class Main {
     }
 
     static String join(ArrayList<String> cards) {
-        String out = "";
+        StringBuilder out = new StringBuilder();
         for (int i = 0; i < cards.size(); i++) {
-            out += i + ":" + cards.get(i);
+            out.append(i).append(":").append(cards.get(i));
             if (i < cards.size() - 1) {
-                out += " ";
+                out.append(" ");
             }
         }
-        return out;
+        return out.toString();
     }
 
     static void selfTest() {
@@ -512,7 +503,7 @@ public class Main {
         if (isLegal("B3", "W", "B")) passed++; else fail("called color");
         if (!isLegal("B3", "R9", "")) passed++; else fail("illegal mismatch");
 
-        ArrayList<String> h = new ArrayList<String>();
+        ArrayList<String> h = new ArrayList<>();
         h.add("B3");
         h.add("R4");
         h.add("W");
@@ -520,7 +511,7 @@ public class Main {
         calledColor = "";
         if (chooseBotCard(h) == 1) passed++; else fail("bot normal before wild");
 
-        ArrayList<String> h2 = new ArrayList<String>();
+        ArrayList<String> h2 = new ArrayList<>();
         h2.add("B1");
         h2.add("B2");
         h2.add("R3");
